added dockerhub to image

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,8 @@ services:
   system-monitor:
     ports:
       - 8081:8080
-    image: system-monitor:v0.0.5.8-alpha
+    image: geeksheik9/system-monitor:v0.0.5.8-alpha
     container_name: system-monitor
     build: .
     volumes:
-      - /sys/class/thermal/thermal_zone*/temp:/temp
+      - /sys/class/thermal/thermal_zone*/temp:/temps
