--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ services:
   system-monitor:
     ports:
       - 8081:8080
-    image: geeksheik9/system-monitor:latest
+    image: geeksheik9/system-monitor
     container_name: system-monitor
     volumes:
       - /sys/class/thermal/thermal_zone0/temp:/sys/class/thermal/thermal_zone0/temp
